[gd_scene load_steps=7 format=3 uid="uid://d2g78tpqbyf5g"]

[ext_resource type="PackedScene" uid="uid://lde2xq3vq635" path="res://models/enemy-flying.glb" id="1_3v8nl"]
[ext_resource type="Script" uid="uid://b6udw8uhlp4ei" path="res://objects/enemy.gd" id="1_jg24b"]
[ext_resource type="PackedScene" uid="uid://c4cej68vmmp6c" path="res://objects/bullet.tscn" id="2_we7g8"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="3_iblw5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_we7g8"]
margin = 0.05
points = PackedVector3Array(0, 0, 0, -5, -5, 10, -5, 5, 10, 5, 5, 10, 5, -5, 10, 0, 0, 0)

[node name="enemy-flying" type="Area3D"]
script = ExtResource("1_jg24b")
Bullet = ExtResource("2_we7g8")

[node name="enemy-flying" parent="." instance=ExtResource("1_3v8nl")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 500)

[node name="MuzzleA" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.45, 0.3, 0.4)
sprite_frames = ExtResource("3_iblw5")
frame = 2
frame_progress = 1.0

[node name="MuzzleB" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.45, 0.3, 0.4)
sprite_frames = ExtResource("3_iblw5")
frame = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.333
autostart = true

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29273826, 0.6475944)

[node name="Aggro" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Aggro"]
transform = Transform3D(500, 0, 0, 0, 500, 0, 0, 0, 500, 0, 0.30040395, 0)
shape = SubResource("ConvexPolygonShape3D_we7g8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Aggro" to="." method="_on_aggro_body_entered"]
[connection signal="body_exited" from="Aggro" to="." method="_on_aggro_body_exited"]
